--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-slick": "^0.23.13",
+    "encoding": "^0.1.13",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
